fixing timeline + adding timeline scrollbar

--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -221,3 +221,8 @@ canvas#gameCanvas {
 	display: block;
 	/*cursor: none;*/
 }
+
+.ignore{
+	pointer-events: none !important;
+	user-select: none !important;
+}
