--- a/src/client/css/timeline.css
+++ b/src/client/css/timeline.css
@@ -61,6 +61,10 @@ input#frameCount {
 	margin-left: auto;
 }
 
+#timelineApp .wrapper .row-a {
+
+}
+
 #timelineApp .wrapper .row-b {
 	padding-top: 10px;
 	background: rgba(20, 10, 30, 0.05);
@@ -84,7 +88,24 @@ input#frameCount {
 #timelineGraphWrapper {
 	position: relative;
 	display: block;
-	height: 39px;
+	height: 60px;
+	width: 100%;
+}
+
+#timelineScrollWrapper {
+	position: relative;
+	display: flex;
+	align-items: center;
+	align-content: center;
+	justify-content: flex-start;
+	width: 100%;
+	height: 15px;
+}
+
+#timelineScrollWrapper button {
+	background: green;
+	position: absolute;
+	height: 50%;
 	width: 100%;
 }
 
